// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Sidenav adds mini classes without sideBarOpen 1`] = `
.c6 {
  composes: color:#f44336;
}

.c7 {
  margin: 0;
}

.c0 {
  background-color: #263238;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms,visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms,visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  height: auto;
  width: 0;
  border-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  visibility: hidden;
}

.c4 {
  composes: color:#b0bec5;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-transform: none;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms,opacity 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms,opacity 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 0;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  padding: 0;
  height: 4.8rem;
  border-left: 3px solid transparent;
}

.c2:hover {
  border-left: 3px solid #ff9800;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  min-width: 5rem;
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  display: none;
}

@media (min-width:600px) {
  .c0 {
    height: calc(100% - 5rem);
    width: 5rem;
    position: fixed;
    visibility: visible;
  }
}

<div
  className="MuiPaper-root-1 MuiPaper-shadow16-19 MuiPaper-rounded-2 c0"
  open={false}
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 c1"
  >
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-pencil color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-cog color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-history color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-file-text-o color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-film color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-check color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-calendar color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-eye color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tv color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-heartbeat color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={false}
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <p
        className="c7"
      >
        Version Info
      </p>
      <p
        className="c7"
      >
        Flexget: 
         
         
      </p>
      <p
        className="c7"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;

exports[`components/layout/Sidenav renders correctly with sideBarOpen 1`] = `
.c6 {
  composes: color:#f44336;
}

.c7 {
  margin: 0;
}

.c0 {
  background-color: #263238;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms,visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms,visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  height: auto;
  width: 100vw;
  border-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  visibility: visible;
}

.c4 {
  composes: color:#b0bec5;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-transform: none;
  visibility: visible;
  opacity: 1;
  -webkit-transition: visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms,opacity 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: visibility 300ms cubic-bezier(0.4,0,0.2,1) 0ms,opacity 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: auto;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  padding: 0;
  height: 4.8rem;
  border-left: 3px solid transparent;
}

.c2:hover {
  border-left: 3px solid #ff9800;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  min-width: 5rem;
  padding-top: 0;
  padding-bottom: 0;
}

.c5 {
  display: block;
}

@media (min-width:600px) {
  .c0 {
    height: calc(100% - 5rem);
    width: 19rem;
    position: fixed;
    visibility: visible;
  }
}

<div
  className="MuiPaper-root-1 MuiPaper-shadow16-19 MuiPaper-rounded-2 c0"
  open={true}
>
  <ul
    className="MuiList-root-28 MuiList-padding-29 c1"
  >
    <a
      href="/config"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-pencil color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Config
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/execute"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-cog color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Execute
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/history"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-history color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              History
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/log"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-file-text-o color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Log
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/movies"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-film color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Movies
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/pending"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-check color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Pending
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/schedule"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-calendar color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Schedule
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/seen"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-eye color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Seen
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/series"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-tv color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Series
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
    <a
      href="/status"
      onClick={[Function]}
    >
      <li
        className="MuiListItem-root-32 MuiListItem-gutters-39 MuiListItem-default-35 c2"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="MuiButtonBase-root-55 MuiButton-root-41 MuiButton-flatAccent-45 c3"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-43"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-57 fa fa-heartbeat color: #b0bec5 ;"
            />
            <p
              className="c4"
              open={true}
            >
              Status
            </p>
          </span>
          <span
            className="MuiTouchRipple-root-64"
          />
        </button>
      </li>
    </a>
  </ul>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <p
        className="c7"
      >
        Version Info
      </p>
      <p
        className="c7"
      >
        Flexget: 
         
         
      </p>
      <p
        className="c7"
      >
        API: 
      </p>
    </div>
  </div>
</div>
`;
